<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/item_score_stroke_color"
    app:strokeWidth="1dp"
    app:layout_scrollEffect="compress"
    app:cardBackgroundColor="@color/card_background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gameNumberPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/gameResultPlaceholder"
            android:gravity="center"
            android:hint="@string/game_number_hint"
            android:textColor="@color/main_extra"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gameResultPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:hint="@string/game_result_type_hint"
            android:padding="8dp"
            android:textColor="@color/main_extra"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userNumberPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/gameResultPlaceholder"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:hint="@string/player_number_hint"
            android:padding="8dp"
            android:textColor="@color/main_extra"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>